[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/11.png" type="Texture2D" id=1]
[ext_resource path="res://images/12.png" type="Texture2D" id=2]
[ext_resource path="res://images/3.png" type="Texture2D" id=3]
[ext_resource path="res://images/2.png" type="Texture2D" id=4]
[ext_resource path="res://images/4.png" type="Texture2D" id=5]
[ext_resource path="res://images/8.png" type="Texture2D" id=6]
[ext_resource path="res://images/5.png" type="Texture2D" id=7]
[ext_resource path="res://images/7.png" type="Texture2D" id=8]
[ext_resource path="res://images/6.png" type="Texture2D" id=9]
[ext_resource path="res://images/1.png" type="Texture2D" id=10]
[ext_resource path="res://images/9.png" type="Texture2D" id=11]
[ext_resource path="res://images/10.png" type="Texture2D" id=12]
[ext_resource path="res://models/D12.obj" type="ArrayMesh" id=13]
[ext_resource path="res://d12.gd" type="Script" id=14]
[ext_resource path="res://choma_blue.tres" type="Material" id=15]

[sub_resource type="ConvexPolygonShape3D" id=1]
points = PackedVector3Array( 9.2605, 1.83781, 2.63944, 9.15172, -0.00152445, -0.333462, 9.04295, -1.83934, -3.30824, 7.20825, -0.00152445, -5.65001, 4.51785, 7.78898, -1.66166, 7.48926, 4.8134, 2.13077, 5.71801, 7.78898, 1.62398, 2.96597, 7.78898, 3.78112, 0.349897, 1.83781, 9.62142, 5.93919, -1.83934, 7.5792, 5.59111, -7.7905, -2.05352, 5.37174, 1.83781, -7.99179, 3.31587, 7.78898, -4.9473, 0.212114, 7.78898, 5.93826, -5.37356, -1.83934, 7.9899, -9.04476, 1.83781, 3.30636, -3.31949, -7.7905, 4.93034, 3.6712, -7.7905, 4.67412, -0.21574, -7.7905, -5.9571, -0.35171, -1.83934, -9.6233, -0.179482, 7.78898, -4.82107, -5.59473, 7.78898, 2.03468, -9.2605, -1.83934, -2.64132, -5.72164, -7.7905, -1.64093, -5.94101, 1.83781, -7.58108, -3.67483, 7.78898, -4.69296, -4.63569, 7.78898, -1.3282 )

[node name="d12" type="RigidBody3D"]
gravity_scale = 2.0
script = ExtResource( 14 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
mesh = ExtResource( 13 )
material/0 = ExtResource( 15 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
shape = SubResource( 1 )

[node name="face1" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.58275, 0 )
opacity = 0.0
billboard = 1
texture = ExtResource( 10 )

[node name="face2" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.22059, 1.0958, -0.833624 )
opacity = 0.0
billboard = 1
texture = ExtResource( 4 )

[node name="face3" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.134072, 1.28276, -2.48399 )
opacity = 0.0
billboard = 1
texture = ExtResource( 3 )

[node name="face4" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3113, 1.18787, -0.710831 )
opacity = 0.0
billboard = 1
texture = ExtResource( 5 )

[node name="face5" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.24658, 1.1415, 1.86514 )
opacity = 0.0
billboard = 1
texture = ExtResource( 7 )

[node name="face6" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35011, 1.0638, 1.68755 )
opacity = 0.0
billboard = 1
texture = ExtResource( 9 )

[node name="face7" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4334, -1.13906, -1.81217 )
opacity = 0.0
billboard = 1
texture = ExtResource( 8 )

[node name="face8" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3347, -1.17179, -1.88652 )
opacity = 0.0
billboard = 1
texture = ExtResource( 6 )

[node name="face9" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.18256, -1.08693, 0.57555 )
opacity = 0.0
billboard = 1
texture = ExtResource( 11 )

[node name="face10" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0184549, -1.19833, 2.19324 )
opacity = 0.0
billboard = 1
texture = ExtResource( 12 )

[node name="face11" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.06717, -1.19665, 0.781062 )
opacity = 0.0
billboard = 1
texture = ExtResource( 1 )

[node name="face12" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.80606, 0 )
opacity = 0.0
billboard = 1
texture = ExtResource( 2 )
